# qml-rethinking-generalization

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt  run_experiment.py
configs/: partial_corruption_n8.yaml  random_labels_n16.yaml  random_labels_n8.yaml  random_labels_n8_demo.yaml  random_states_n8.yaml  real_labels_n8.yaml
results/: random_labels_n8_demo.csv  real_labels_n8.csv
scripts/: benchmark.py  convert_authors_states.py  extract_tc_gates.py  fetch_authors_data.py  make_figures.py
src/: __init__.py  config.py  data_generation.py  hamiltonian.py  job_runner.py  loss.py  phases.py  qcnn.py  randomization.py  runner.py  training.py
tests/: test_config_runner.py  test_data_generation.py  test_hamiltonian.py  test_integration.py  test_job_runner.py  test_loss.py  test_phases.py  test_qcnn.py  test_randomization.py  test_training.py
